# Modules_Python

Module00/ex1/: ft_plot_area.py
Module00/ex2/: ft_harvest_total.py
Module00/ex3/: ft_plant_age.py
Module00/ex4/: ft_water_reminder.py
Module00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Module00/ex6/: ft_garden_summary.py
Module01/ex0/: ft_garden_intro.py
Module01/ex1/: ft_garden_data.py
Module01/ex2/: ft_plant_growth.py
Module01/ex3/: ft_plant_factory.py
Module01/ex4/: ft_garden_security.py
Module01/ex5/: ft_plant_types.py
Module01/ex6/: ft_garden_analytics.py
Module02/ex0/: ft_first_exception.py
Module02/ex1/: ft_different_errors.py
Module02/ex2/: ft_custom_errors.py
Module02/ex3/: ft_finally_block.py
Module02/ex4/: ft_raise_errors.py
Module02/ex5/: ft_garden_management.py
Module03/ex0/: ft_command_quest.py
Module03/ex1/: ft_score_analytics.py
Module03/ex2/: ft_coordinate_system.py
Module03/ex3/: ft_achievement_tracker.py
Module03/ex4/: ft_inventory_system.py
Module03/ex5/: ft_data_stream.py
Module03/ex6/: ft_analytics_dashboard.py
Module04/ex0/: ft_ancient_text.py
Module04/ex1/: ft_archive_creation.py
Module04/ex2/: ft_stream_management.py
Module04/ex3/: ft_vault_security.py
Module04/ex4/: ft_crisis_response.py
Module05/ex0/: stream_processor.py
Module05/ex1/: data_stream.py
Module05/ex2/: nexus_pipeline.py
Module06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Module08/ex1/: loading.py  pyproject.toml  requirements.txt
(+32 files in other folders)
