[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "Armenag",email = "ajeloyan@student.42lyon.fr"}
]
requires-python = "3.13.1"
dependencies = [
    "matplotlib (==3.10.8)",
    "pandas (==3.0.1)",
    "numpy (==2.4.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
